--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,10 @@
-<!-- Build parameterclone.
- JUnit test is not yet available for this build. -->
-<project basedir="." default="addon" name="BUILD_parameterclone">
+<!-- Build parameterclone model -->
+<project basedir="." default="build_jar_all_parameterclone" name="BUILD_parameterclone">
 	<description>
-	    Build parameterclone. 
-	    JUnit test is not yet available for this build.
-	    $Id: build_parameterclone.xml $
-	</description>
-
+ 	Build parameterclone.
+ 	JUnit test is available for this build.
+ 	$Id: build_parameterclone.xml $
+ 	</description>
 	<!-- set global properties for this build -->
 	<property name="srcparameterclone" location="src" />
 	<property name="buildparameterclone" location="build" />
@@ -17,63 +15,44 @@
 	<property name="libBeast2" location="${beast2path}/lib" />
 	<property name="srcBeast2" location="${beast2path}/src" />
 	<property name="beast2classpath" location="${beast2path}/build" />
-	<property name="Add_on_dir" value="${release_dir}/add-on" />
-	<property name="version" value="1.0.0-alpha" />
-
-    <import file="${beast2path}/build.xml" />
-
+	<property name="Add_on_dir" value="${release_dir}/package" />
+	<import file="${beast2path}/build.xml" />
 	<property name="main_class_BEAST" value="beast.app.BeastMCMC" />
-	<property name="report" value="${buildparameterclone}/junitreport"/>
-
+	<property name="report" value="${buildparameterclone}/junitreport" />
 	<path id="classpath">
-        <pathelement path="${buildparameterclone}"/>
-		<fileset dir="${libBeast2}" includes="junit-4.8.2.jar"/>
-        <pathelement path="${beast2classpath}"/>
+		<pathelement path="${buildparameterclone}" />
+		<fileset dir="${libBeast2}" includes="junit-4.8.2.jar" />
+		<pathelement path="${beast2classpath}" />
 	</path>
-
 	<!-- start -->
 	<target name="initparameterclone">
 		<echo message="${ant.project.name}: ${ant.file}" />
 	</target>
-
 	<target name="cleanparameterclone">
-    	<delete dir="${buildparameterclone}" />
+		<delete dir="${buildparameterclone}" />
 	</target>
 
 	<!-- clean previous build, and then compile Java source code, and Juint test -->
-	<target name="build_all_parameterclone" depends="cleanparameterclone,compile-allparameterclone,junitparameterclone"
-        description="Clean and Build all run-time stuff">
+	<target name="build_all_parameterclone" depends="cleanparameterclone,compile-allparameterclone,junitparameterclone" description="Clean and Build all run-time stuff">
 	</target>
 
 	<!-- clean previous build, compile Java source code, and Junit test, and make the beast.jar and beauti.jar -->
-	<target name="build_jar_all_parameterclone" depends="cleanparameterclone,compile-allparameterclone,junitparameterclone,dist_all_parameterclone"
-        description="Clean and Build all run-time stuff">
+	<target name="build_jar_all_parameterclone" depends="cleanparameterclone,compile-allparameterclone,junitparameterclone,dist_all_parameterclone" description="Clean and Build all run-time stuff">
 	</target>
 
-
 	<!-- No JUnit Test, clean previous build, compile Java source code, and make the parameterclone.jar and beauti.jar -->
-	<target name="build_jar_all_parameterclone_NoJUnitTest" depends="cleanparameterclone,compile-allparameterclone,dist_all_parameterclone"
-        description="Clean and Build all run-time stuff">
+	<target name="build_jar_all_parameterclone_NoJUnitTest" depends="cleanparameterclone,compile-allparameterclone,dist_all_parameterclone" description="Clean and Build all run-time stuff">
 	</target>
 
 	<!-- compile Java source code -->
 	<target name="compile-allparameterclone" depends="initparameterclone,compile-all">
-
-
-	    <!-- Capture the path as a delimited property using the refid attribute -->
-	    <property name="myclasspath" refid="classpath"/>
-	    <!-- Emit the property to the ant console -->
-	    <echo message="Classpath = ${myclasspath}"/>
-
+		<!-- Capture the path as a delimited property using the refid attribute -->
+		<property name="myclasspath" refid="classpath" />
+		<!-- Emit the property to the ant console -->
+		<echo message="Classpath = ${myclasspath}" />
 		<mkdir dir="${buildparameterclone}" />
-
 		<!-- Compile the java code from ${srcparameterclone} into ${buildparameterclone} /bin -->
-		<javac srcdir="${srcparameterclone}" destdir="${buildparameterclone}" classpathref="classpath" 
-		       fork="true"
-		       memoryinitialsize="256m"
-		       memorymaximumsize="256m">
-			   <!--source="1.6"
-		       target="1.6"-->
+		<javac srcdir="${srcparameterclone}" destdir="${buildparameterclone}" classpathref="classpath" fork="true" memoryinitialsize="256m" memorymaximumsize="256m">
 			<include name="beast/**/**" />
 			<!-- compile JUnit test classes -->
 			<include name="test/beast/**" />
@@ -85,7 +64,6 @@
 	<target name="dist_all_parameterclone" depends="compile-allparameterclone" description="create parameterclone jar">
 		<!-- Create the distribution directory -->
 		<mkdir dir="${distparameterclone}" />
-
 		<!-- Put everything in ${buildparameterclone} into the beast.jar file -->
 		<jar jarfile="${distparameterclone}/parameterclone.jar">
 			<manifest>
@@ -109,8 +87,8 @@
 				<include name="beast/**/*.png" />
 				<include name="beast/**/*.xsl" />
 			</fileset>
-        </jar>
-		<jar jarfile="${distparameterclone}/parameterclone.addon.jar">
+		</jar>
+		<jar jarfile="${dist}/parameterclone.addon.jar">
 			<manifest>
 				<attribute name="Built-By" value="${user.name}" />
 			</manifest>
@@ -127,73 +105,55 @@
 		<java jar="${distparameterclone}/parameterclone.jar" fork="true" />
 	</target>
 
-	
 	<!-- JUnit test -->
 	<target name="junitparameterclone">
 		<mkdir dir="${report}" />
-		<junit printsummary="yes"> <!--showoutput='yes'-->
+		<junit printsummary="yes">
+			<!--showoutput='yes'-->
 			<classpath>
 				<path refid="classpath" />
 				<path location="${buildparameterclone}" />
 			</classpath>
-
 			<formatter type="xml" />
-
 			<batchtest fork="yes" todir="${report}">
 				<fileset dir="${srcparameterclone}">
-                    <include name="test/**/*Test.java"/>                                         
+					<include name="test/**/*Test.java" />
 				</fileset>
 				<fileset dir="${srcBeast2}">
-                    <include name="test/beast/integration/**/*Test.java"/>                                         
-                    <exclude name="test/beast/integration/**/ResumeTest.java"/>                                         
+					<include name="test/beast/integration/**/*Test.java" />
+					<exclude name="test/beast/integration/**/ResumeTest.java" />
 				</fileset>
 			</batchtest>
 		</junit>
 		<echo message="JUnit test finished." />
 	</target>
-    
-    <target name="junitreport">
+	<target name="junitreport">
 		<junitreport todir="${report}">
-			<fileset dir="${report}" includes="*.xml"/>
-			<report format="frames" todir="${report}"/>
+			<fileset dir="${report}" includes="*.xml" />
+			<report format="frames" todir="${report}" />
 		</junitreport>
 		<echo message="JUnit test report finished." />
 	</target>
-
-
-	<target name="addon"
-	        depends="build_jar_all_parameterclone_NoJUnitTest"
-	        description="release BEAST 2 add-on version of parameterclone">
-
+	<target name="addon" depends="build_jar_all_parameterclone_NoJUnitTest" description="release BEAST 2 package version of parameterclone">
 		<delete dir="${Add_on_dir}" />
 		<!-- Create the release directory -->
 		<mkdir dir="${Add_on_dir}" />
 		<mkdir dir="${Add_on_dir}/lib" />
-		<mkdir dir="${Add_on_dir}/examples" />
 		<mkdir dir="${Add_on_dir}/templates" />
-
-		<copy todir="${Add_on_dir}">
-			<fileset file="version.xml"/>
-		</copy>
-		<copy todir="${Add_on_dir}/examples">
-			<fileset dir="examples" />
-		</copy>
 		<copy todir="${Add_on_dir}/lib">
-			<fileset dir="${distparameterclone}" includes="parameterclone.addon.jar" />
+			<fileset dir="${dist}" includes="parameterclone.addon.jar" />
 		</copy>
 		<copy todir="${Add_on_dir}">
-			<fileset dir="${distparameterclone}" includes="parameterclone.src.jar" />
+			<fileset dir="${dist}" includes="parameterclone.src.jar" />
 		</copy>
 		<copy todir="${Add_on_dir}/templates">
-			<fileset dir="templates" />
+			<fileset file="templates/parameterclone.xml" />
 		</copy>
-
-		<jar jarfile="${distparameterclone}/parameterclone.addon.v${version}.zip">
+		<jar jarfile="${dist}/parameterclone.addon.zip">
 			<fileset dir="${Add_on_dir}">
 				<include name="**/*" />
 			</fileset>
-        </jar>
-		<echo message="Add-on version v${version} release is finished." />
+		</jar>
+		<echo message="Package version release is finished." />
 	</target>
-
 </project>
