--- a/build.xml
+++ b/build.xml
@@ -1,18 +1,21 @@
-<!-- Build parameterclone. It is also used by Hudson parameterclone project. JUnit test is available for this build. -->
-<project basedir="." default="addon" name="BUILD_parameterclone">
+<!-- Build ${package}. It is also used by correlatedcharacters project. JUnit test is available for this build. -->
+<project basedir="." default="addon" name="BUILD_${package}">
+	<!-- Generic package build script -->
+	<property name="package" location="${package}" />
+
 	<description>
-	    Build parameterclone. 
-            Also used by Hudson parameterclone project. 
+	    Build ${package}. 
+            Also used by the correlatedcharacters package. 
 	    JUnit test is available for this build.
-	    $Id: build_parameterclone.xml $
+	    $Id: build_${package}.xml $
 	</description>
 
 	<!-- set global properties for this build -->
-	<property name="srcparameterclone" location="src" />
-	<property name="buildparameterclone" location="build" />
-	<property name="libparameterclone" location="lib" />
+	<property name="src" location="src" />
+	<property name="build${package}" location="build" />
+	<property name="lib${package}" location="lib" />
 	<property name="release_dir" value="release" />
-	<property name="distparameterclone" location="${buildparameterclone}/dist" />
+	<property name="dist${package}" location="${build}/dist" />
 	<property name="beast2path" location="../beast2" />
 	<property name="libBeast2" location="${beast2path}/lib" />
 	<property name="srcBeast2" location="${beast2path}/src" />
@@ -23,10 +26,10 @@
     <import file="${beast2path}/build.xml" />
 
 	<property name="main_class_BEAST" value="beast.app.BeastMCMC" />
-	<property name="report" value="${buildparameterclone}/junitreport"/>
+	<property name="report" value="${build}/junitreport"/>
 
 	<path id="classpath">
-        <pathelement path="${buildparameterclone}"/>
+        <pathelement path="${build}"/>
 		<fileset dir="${libBeast2}" includes="junit-4.8.2.jar"/>
 		<fileset dir="${libBeast2}" includes="jam.jar"/>
 		<fileset dir="${libBeast2}" includes="beagle.jar"/>
@@ -34,32 +37,32 @@
 	</path>
 
 	<!-- start -->
-	<target name="initparameterclone">
+	<target name="init${package}">
 		<echo message="${ant.project.name}: ${ant.file}" />
 	</target>
 
-	<target name="cleanparameterclone">
-    	<delete dir="${buildparameterclone}" />
+	<target name="clean${package}">
+    	<delete dir="${build}" />
 	</target>
 
 	<!-- clean previous build, and then compile Java source code, and Juint test -->
-	<target name="build_all_parameterclone" depends="cleanparameterclone,compile-allparameterclone,junitparameterclone"
+	<target name="build_all_${package}" depends="clean${package},compile-all${package},junit${package}"
         description="Clean and Build all run-time stuff">
 	</target>
 
 	<!-- clean previous build, compile Java source code, and Junit test, and make the beast.jar and beauti.jar -->
-	<target name="build_jar_all_parameterclone" depends="cleanparameterclone,compile-allparameterclone,junitparameterclone,dist_all_parameterclone"
+	<target name="build_jar_all_${package}" depends="clean${package},compile-all${package},junit${package},dist_all_${package}"
         description="Clean and Build all run-time stuff">
 	</target>
 
 
-	<!-- No JUnit Test, clean previous build, compile Java source code, and make the parameterclone.jar and beauti.jar -->
-	<target name="build_jar_all_parameterclone_NoJUnitTest" depends="cleanparameterclone,compile-allparameterclone,dist_all_parameterclone"
+	<!-- No JUnit Test, clean previous build, compile Java source code, and make the ${package}.jar and beauti.jar -->
+	<target name="build_jar_all_${package}_NoJUnitTest" depends="clean${package},compile-all${package},dist_all_${package}"
         description="Clean and Build all run-time stuff">
 	</target>
 
 	<!-- compile Java source code -->
-	<target name="compile-allparameterclone" depends="initparameterclone,compile-all">
+	<target name="compile-all${package}" depends="init${package},compile-all">
 
 
 	    <!-- Capture the path as a delimited property using the refid attribute -->
@@ -67,10 +70,10 @@
 	    <!-- Emit the property to the ant console -->
 	    <echo message="Classpath = ${myclasspath}"/>
 
-		<mkdir dir="${buildparameterclone}" />
+		<mkdir dir="${build}" />
 
-		<!-- Compile the java code from ${srcparameterclone} into ${buildparameterclone} /bin -->
-		<javac srcdir="${srcparameterclone}" destdir="${buildparameterclone}" classpathref="classpath" 
+		<!-- Compile the java code from ${src} into ${build} /bin -->
+		<javac srcdir="${src}" destdir="${build}" classpathref="classpath" 
 		       fork="true"
 		       memoryinitialsize="256m"
 		       memorymaximumsize="256m"
@@ -80,25 +83,25 @@
 			<!-- compile JUnit test classes -->
 			<include name="test/**" />
 		</javac>
-		<copy todir="${buildparameterclone}">
-			<fileset dir="${srcparameterclone}" includes="**/*.properties" />
-			<fileset dir="${srcparameterclone}" includes="**/*.png" />
+		<copy todir="${build}">
+			<fileset dir="${src}" includes="**/*.properties" />
+			<fileset dir="${src}" includes="**/*.png" />
 		</copy>
 		<echo message="Successfully compiled." />
 	</target>
 
 	<!-- make the beast.jar and beauti.jar -->
-	<target name="dist_all_parameterclone" depends="compile-allparameterclone" description="create parameterclone jar">
+	<target name="dist_all_${package}" depends="compile-all${package}" description="create ${package} jar">
 		<!-- Create the distribution directory -->
-		<mkdir dir="${distparameterclone}" />
+		<mkdir dir="${dist}" />
 
-		<!-- Put everything in ${buildparameterclone} into the beast.jar file -->
-		<jar jarfile="${distparameterclone}/parameterclone.jar">
+		<!-- Put everything in ${build} into the beast.jar file -->
+		<jar jarfile="${dist}/${package}.jar">
 			<manifest>
 				<attribute name="Built-By" value="${user.name}" />
 				<attribute name="Main-Class" value="${main_class_BEAST}" />
 			</manifest>
-			<fileset dir="${buildparameterclone}">
+			<fileset dir="${build}">
 				<include name="**/*.class" />
 			</fileset>
 			<fileset dir="${beast2classpath}">
@@ -109,18 +112,18 @@
 				<include name="org/**/*.class" />
 			</fileset>
 		</jar>
-		<jar jarfile="${distparameterclone}/parameterclone.src.jar">
-			<fileset dir="${srcparameterclone}">
+		<jar jarfile="${dist}/${package}.src.jar">
+			<fileset dir="${src}">
 				<include name="**/*.java" />
 				<include name="**/*.png" />
 				<include name="**/*.xsl" />
 			</fileset>
         </jar>
-		<jar jarfile="${distparameterclone}/parameterclone.addon.jar">
+		<jar jarfile="${dist}/${package}.addon.jar">
 			<manifest>
 				<attribute name="Built-By" value="${user.name}" />
 			</manifest>
-			<fileset dir="${buildparameterclone}">
+			<fileset dir="${build}">
 				<include name="**/*.png" />
 				<include name="**/*.class" />
 				<include name="**/*.properties" />
@@ -129,24 +132,24 @@
 	</target>
 
 	<!-- run beast.jar -->
-	<target name="run_parameterclone">
-		<java jar="${distparameterclone}/parameterclone.jar" fork="true" />
+	<target name="run_${package}">
+		<java jar="${dist}/${package}.jar" fork="true" />
 	</target>
 
 	
 	<!-- JUnit test -->
-	<target name="junitparameterclone">
+	<target name="junit${package}">
 		<mkdir dir="${report}" />
 		<junit printsummary="yes"> <!--showoutput='yes'-->
 			<classpath>
 				<path refid="classpath" />
-				<path location="${buildparameterclone}" />
+				<path location="${build}" />
 			</classpath>
 
 			<formatter type="xml" />
 
 			<batchtest fork="yes" todir="${report}">
-				<fileset dir="${srcparameterclone}">
+				<fileset dir="${src}">
                     <include name="test/**/*Test.java"/>                                         
 				</fileset>
 				<fileset dir="${srcBeast2}">
@@ -168,8 +171,8 @@
 
 
 	<target name="addon"
-	        depends="build_jar_all_parameterclone_NoJUnitTest"
-	        description="release BEAST 2 add-on version of parameterclone">
+	        depends="build_jar_all_${package}_NoJUnitTest"
+	        description="release BEAST 2 add-on version of ${package}">
 
 		<delete dir="${Add_on_dir}" />
 		<!-- Create the release directory -->
@@ -189,19 +192,17 @@
 			<fileset file="doc/readme.txt"/>
 		</copy>
 		<copy todir="${Add_on_dir}/lib">
-			<fileset dir="${distparameterclone}" includes="parameterclone.addon.jar" />
+			<fileset dir="${dist}" includes="${package}.addon.jar" />
 		</copy>
 		<copy todir="${Add_on_dir}">
-			<fileset dir="${distparameterclone}" includes="parameterclone.src.jar" />
+			<fileset dir="${dist}" includes="${package}.src.jar" />
 		</copy>
-		<!--
 		<copy todir="${Add_on_dir}/templates">
-			<fileset file="templates/parameterclone.xml" />
-			<fileset file="templates/AutoPartition.xml" />
+            <fileset dir="templates" includes="${package}.xml" />                                         
 		</copy>
-		-->
 
-		<jar jarfile="${distparameterclone}/parameterclone.addon.v${version}.zip">
+		
+		<jar jarfile="${dist}/${package}.addon.v${version}.zip">
 			<fileset dir="${Add_on_dir}">
 				<include name="**/*" />
 			</fileset>
