--- a/build.xml
+++ b/build.xml
@@ -1,213 +1,279 @@
-<!-- Build ${package}. It is also used by correlatedcharacters project. JUnit test is available for this build. -->
-<project basedir="." default="addon" name="BUILD_${package}">
-	<!-- Generic package build script -->
-	<property name="package" location="${package}" />
+<project default="build" basedir=".">
 
-	<description>
-	    Build ${package}. 
-            Also used by the correlatedcharacters package. 
-	    JUnit test is available for this build.
-	    $Id: build_${package}.xml $
-	</description>
+  <!-- CONFIGURATION: Source, JUnit test code and jar library locations. -->
+  <property name="src" location="src"/>
+  <property name="test" location="test"/>
+  <property name="lib" location="lib"/>
 
-	<!-- set global properties for this build -->
-	<property name="src" location="src" />
-	<property name="build${package}" location="build" />
-	<property name="lib${package}" location="lib" />
-	<property name="release_dir" value="release" />
-	<property name="dist${package}" location="${build}/dist" />
-	<property name="beast2path" location="../beast2" />
-	<property name="libBeast2" location="${beast2path}/lib" />
-	<property name="srcBeast2" location="${beast2path}/src" />
-	<property name="beast2classpath" location="${beast2path}/build" />
-	<property name="Add_on_dir" value="${release_dir}/add-on" />
-	<property name="version" value="1.1.1" />
+  <property name="sourceVersion" value="1.8"/>
+  <property name="targetVersion" value="1.8"/>
 
-    <import file="${beast2path}/build.xml" />
+  <property name="beastRev" value="2.3.3"/>
+  <property name="beastAr" value="beast2-2.3.3"/>
+  <!--*******************************************************************-->
 
-	<property name="main_class_BEAST" value="beast.app.BeastMCMC" />
-	<property name="report" value="${build}/junitreport"/>
+  <!-- Directories necessary for all BEAST 2 packages -->
+  <property name="doc" location="doc"/>
+  <property name="examples" location="examples"/>
+  <property name="templates" location="templates"/>
 
-	<path id="classpath">
-        <pathelement path="${build}"/>
-		<fileset dir="${libBeast2}" includes="junit-4.8.2.jar"/>
-		<fileset dir="${libBeast2}" includes="jam.jar"/>
-		<fileset dir="${libBeast2}" includes="beagle.jar"/>
-        <pathelement path="${beast2classpath}"/>
-	</path>
+  <!-- Names of temporary build/test directories -->
+  <property name="build" location="build"/>
+  <property name="build-lib" location="build-lib"/>
+  <property name="build-test" location="build-test"/>
+  <property name="test-reports" location="test-reports"/>
+  <property name="dist" location="dist"/>
+  <property name="pack" location="${dist}/package"/>
 
-	<!-- start -->
-	<target name="init${package}">
-		<echo message="${ant.project.name}: ${ant.file}" />
-	</target>
+  <!-- Prepare for compilation -->
+  <target name="init">
 
-	<target name="clean${package}">
-    	<delete dir="${build}" />
-	</target>
+    <available file="version.xml" property="versionAvailable"/>
+    <fail unless="versionAvailable">
+      ** Required file version.xml does not exist. **
+      If this is a new project, run "ant skeleton" from
+      the command line to create the files required for
+      your BEAST 2 package.
+    </fail>
 
-	<!-- clean previous build, and then compile Java source code, and Juint test -->
-	<target name="build_all_${package}" depends="clean${package},compile-all${package},junit${package}"
-        description="Clean and Build all run-time stuff">
-	</target>
+    <!-- Read package name and version from xml file -->
+    <xmlproperty file="version.xml" prefix="fromVersionFile" />
+    <property name="projName" value="${fromVersionFile.addon(name)}" />
+    <property name="projVersion" value="${fromVersionFile.addon(version)}" />
 
-	<!-- clean previous build, compile Java source code, and Junit test, and make the beast.jar and beauti.jar -->
-	<target name="build_jar_all_${package}" depends="clean${package},compile-all${package},junit${package},dist_all_${package}"
-        description="Clean and Build all run-time stuff">
-	</target>
+    <mkdir dir="${build}"/>
+    <mkdir dir="${build-lib}"/>
+    <mkdir dir="${dist}"/>
+
+    <copy todir="${build-lib}">
+      <fileset dir="${lib}" includes="*.jar"/>
+    </copy>
+  </target>
+  
+  <target name="beast-exists">
+    <available file="beastexists" property="beast.exists"/>
+  </target>
+  
+  <!-- Get beast -->
+  <target name="get-beast" depends="init, beast-exists" unless="beast.exists">
+    <property name="build-beast" location="build-beast"/>
+    <mkdir dir="${build-beast}"/>
+
+    <get src="https://github.com/CompEvol/beast2/archive/${beastRev}.zip" dest="${build-beast}/beast.zip"/>
+    <unzip src="${build-beast}/beast.zip" dest="${build-beast}"/>
+    <mkdir dir="${build-beast}/${beastAr}/build"/>
+    <javac target="${targetVersion}" source="${sourceVersion}"
+           srcdir="${build-beast}/${beastAr}/src"
+           destdir="${build-beast}/${beastAr}/build" includeantruntime="false">
+      <classpath>
+	<pathelement path="${classpath}"/>
+	<fileset dir="${build-beast}/${beastAr}/lib" includes="*.jar"/>
+      </classpath>
+    </javac>
+    <jar jarfile="${build-lib}/beast2.jar" basedir="${build-beast}/${beastAr}/build" />
+    <copy todir="${build-lib}">
+      <fileset dir="${build-beast}/${beastAr}/lib" includes="*.jar"/>
+    </copy>
+    <touch file="beastexists"/>
+
+    <delete dir="${build-beast}" />
+  </target>
+
+  <!-- Compile -->
+  <target name="compile" depends="init, get-beast">
+    <javac target="${targetVersion}" source="${sourceVersion}" srcdir="${src}" destdir="${build}" includeantruntime="false">
+      <classpath>
+	<pathelement path="${classpath}"/>
+	<fileset dir="${build-lib}" includes="*.jar"/>
+      </classpath>
+    </javac>
+  </target>
+
+  
+  <!-- Prepare for unit test compilation -->
+  <target name="init-test" depends="init">
+    <mkdir dir="${build-test}"/>
+    <mkdir dir="${test-reports}"/>
+  </target>
 
 
-	<!-- No JUnit Test, clean previous build, compile Java source code, and make the ${package}.jar and beauti.jar -->
-	<target name="build_jar_all_${package}_NoJUnitTest" depends="clean${package},compile-all${package},dist_all_${package}"
-        description="Clean and Build all run-time stuff">
-	</target>
+  <!-- Compile unit tests -->
+  <target name="compile-test" depends="init-test,compile">
+    <javac target="${targetVersion}" source="${sourceVersion}" srcdir="${test}" destdir="${build-test}" includeantruntime="false">
+      <classpath>
+	<pathelement path="${classpath}"/>
+	<pathelement path="${build}" />
+	<fileset dir="${build-lib}" includes="*.jar"/>
+      </classpath>
+    </javac>
+  </target>
 
-	<!-- compile Java source code -->
-	<target name="compile-all${package}" depends="init${package},compile-all">
+
+  <!-- Run unit tests -->
+  <target name="test" depends="compile-test">
+    <junit printsummary="yes" maxmemory="1g" failureproperty="testFailed">
+      <classpath>
+	<pathelement path="${classpath}"/>
+	<pathelement path="${build}" />
+	<pathelement path="${build-test}" />
+	<fileset dir="${build-lib}" includes="*.jar"/>
+      </classpath>
+      <batchtest fork="yes" todir="${test-reports}">
+	<fileset dir="${test}">
+	  <include name="**/*Test.java"/>
+	</fileset>
+	<formatter type="plain"/> <!-- usefile="false" -->
+      </batchtest>
+    </junit>
+
+    <fail if="testFailed" status="1" message="Unit test failed."/>
+  </target>
 
 
-	    <!-- Capture the path as a delimited property using the refid attribute -->
-	    <property name="myclasspath" refid="classpath"/>
-	    <!-- Emit the property to the ant console -->
-	    <echo message="Classpath = ${myclasspath}"/>
+  <!-- Create BEAST 2 package -->
+  <target name="build" depends="compile">
+    <property name="fullName" value="${projName}.v${projVersion}"/>
 
-		<mkdir dir="${build}" />
+    <mkdir dir="${pack}"/>
+    <mkdir dir="${pack}/examples"/>
+    <mkdir dir="${pack}/templates"/>
+    <mkdir dir="${pack}/lib"/>
+    <mkdir dir="${pack}/doc"/>
 
-		<!-- Compile the java code from ${src} into ${build} /bin -->
-		<javac srcdir="${src}" destdir="${build}" classpathref="classpath" 
-		       fork="true"
-		       memoryinitialsize="256m"
-		       memorymaximumsize="256m"
-			   source="1.8"
-		       target="1.8">
-			<include name="**/**" />
-			<!-- compile JUnit test classes -->
-			<include name="test/**" />
-		</javac>
-		<copy todir="${build}">
-			<fileset dir="${src}" includes="**/*.properties" />
-			<fileset dir="${src}" includes="**/*.png" />
-		</copy>
-		<echo message="Successfully compiled." />
-	</target>
+    <jar jarfile="${pack}/${fullName}.src.jar" basedir="${src}" />
 
-	<!-- make the beast.jar and beauti.jar -->
-	<target name="dist_all_${package}" depends="compile-all${package}" description="create ${package} jar">
-		<!-- Create the distribution directory -->
-		<mkdir dir="${dist}" />
+    <mkdir dir="${lib}" />
+    <copy todir="${pack}/lib">
+      <fileset dir="${lib}" includes="*.jar" />
+    </copy>
+    <jar jarfile="${pack}/lib/${fullName}.jar" basedir="${build}" />
 
-		<!-- Put everything in ${build} into the beast.jar file -->
-		<jar jarfile="${dist}/${package}.jar">
-			<manifest>
-				<attribute name="Built-By" value="${user.name}" />
-				<attribute name="Main-Class" value="${main_class_BEAST}" />
-			</manifest>
-			<fileset dir="${build}">
-				<include name="**/*.class" />
-			</fileset>
-			<fileset dir="${beast2classpath}">
-				<include name="beast/**/*.class" />
-				<include name="beast/**/*.properties" />
-				<include name="beast/**/*.png" />
-				<include name="beagle/**/*.class" />
-				<include name="org/**/*.class" />
-			</fileset>
-		</jar>
-		<jar jarfile="${dist}/${package}.src.jar">
-			<fileset dir="${src}">
-				<include name="**/*.java" />
-				<include name="**/*.png" />
-				<include name="**/*.xsl" />
-			</fileset>
-        </jar>
-		<jar jarfile="${dist}/${package}.addon.jar">
-			<manifest>
-				<attribute name="Built-By" value="${user.name}" />
-			</manifest>
-			<fileset dir="${build}">
-				<include name="**/*.png" />
-				<include name="**/*.class" />
-				<include name="**/*.properties" />
-			</fileset>
-		</jar>
-	</target>
+    <copy file="README.md" tofile="${pack}/README" />
+    <copy file="COPYING" todir="${pack}" />
+    <copy todir="${pack}">
+      <fileset dir="${lib}" includes="LICENSE*" />
+    </copy>
 
-	<!-- run beast.jar -->
-	<target name="run_${package}">
-		<java jar="${dist}/${package}.jar" fork="true" />
-	</target>
+    <mkdir dir="${examples}" />
+    <copy todir="${pack}/examples">
+      <fileset dir="${examples}" includes="*.xml" />
+      <fileset dir="${examples}" includes="*.fna" />
+    </copy>
 
-	
-	<!-- JUnit test -->
-	<target name="junit${package}">
-		<mkdir dir="${report}" />
-		<junit printsummary="yes"> <!--showoutput='yes'-->
-			<classpath>
-				<path refid="classpath" />
-				<path location="${build}" />
-			</classpath>
+    <mkdir dir="${templates}" />
+    <copy todir="${pack}/templates">
+      <fileset dir="${templates}" includes="*.xml" />
+    </copy>
 
-			<formatter type="xml" />
+    <mkdir dir="${doc}" />
+    <copy todir="${pack}/doc">
+      <fileset dir="${doc}" includes="*.tex,*.doc,*.lyx,*.txt"/>
+    </copy>
 
-			<batchtest fork="yes" todir="${report}">
-				<fileset dir="${src}">
-                    <include name="test/**/*Test.java"/>                                         
-				</fileset>
-				<fileset dir="${srcBeast2}">
-                    <include name="test/beast/integration/**/*Test.java"/>                                         
-                    <exclude name="test/beast/integration/**/ResumeTest.java"/>                                         
-				</fileset>
-			</batchtest>
-		</junit>
-		<echo message="JUnit test finished." />
-	</target>
+    <copy file="version.xml" todir="${pack}" />
+
+    <zip destfile="${dist}/${fullName}.zip" basedir="${pack}" />
+
+    <delete dir="${pack}"/>
+
+    <echo/>
+    <echo/>
+    <echo>** Package ${dist}/${fullName}.zip created successfuly! **</echo>
+  </target>
+
+
+  <!-- Revert to pristine state. -->
+  <target name="clean">
+    <delete dir="${build}" />
+    <delete dir="${build-lib}" />
+    <delete dir="${dist}" />
+    <delete dir="${build-test}" />
+    <delete dir="${test-reports}" />
+  </target>
+
+
+  <!-- Create skeleton package layout in current directory -->
+  <target name="skeleton">
+
+    <fail>
+      <condition>
+	<or>
+	  <resourcecount when="gt" count="1">
+	    <fileset dir="${basedir}"/>
+	  </resourcecount>
+	  <resourcecount when="gt" count="1">
+	    <dirset dir="${basedir}"/>
+	  </resourcecount>
+	</or>
+      </condition>
+
+      ** This directory contains files besides the build script. **
+      You should run "ant skeleton" in a directory containing only the build script.
+    </fail>
     
-    <target name="junitreport">
-		<junitreport todir="${report}">
-			<fileset dir="${report}" includes="*.xml"/>
-			<report format="frames" todir="${report}"/>
-		</junitreport>
-		<echo message="JUnit test report finished." />
-	</target>
+    <echo>===============================</echo>
+    <echo>Create skeleton BEAST 2 package</echo>
+    <echo>===============================</echo>
+    <echo/>
+    <echo>First, we need some information...</echo>
+    <echo/>
 
+    <basename property="defaultProjName" file="${basedir}"/>
 
-	<target name="addon"
-	        depends="build_jar_all_${package}_NoJUnitTest"
-	        description="release BEAST 2 add-on version of ${package}">
+    <input addproperty="projName" defaultvalue="${defaultProjName}">Enter package name</input>
+    <input addproperty="license" defaultvalue="gpl3" validargs="gpl3,lgpl3,lgpl2.1,apache2">Select open source software license</input>
+    <input addproperty="projVersion" defaultvalue="1.0.0">Enter package version</input>
+    <input addproperty="beastVersionReq" defaultvalue="2.1.0">Enter minimum required BEAST 2 version</input>
 
-		<delete dir="${Add_on_dir}" />
-		<!-- Create the release directory -->
-		<mkdir dir="${Add_on_dir}" />
-		<mkdir dir="${Add_on_dir}/doc" />
-		<mkdir dir="${Add_on_dir}/lib" />
-		<mkdir dir="${Add_on_dir}/examples" />
-		<mkdir dir="${Add_on_dir}/templates" />
+    <echo>Assembling files and directory structure...</echo>
 
-		<copy todir="${Add_on_dir}">
-			<fileset file="version.xml"/>
-		</copy>
-		<copy todir="${Add_on_dir}/examples">
-			<fileset dir="examples" />
-		</copy>
-		<copy todir="${Add_on_dir}/doc">
-			<fileset file="doc/readme.txt"/>
-		</copy>
-		<copy todir="${Add_on_dir}/lib">
-			<fileset dir="${dist}" includes="${package}.addon.jar" />
-		</copy>
-		<copy todir="${Add_on_dir}">
-			<fileset dir="${dist}" includes="${package}.src.jar" />
-		</copy>
-		<copy todir="${Add_on_dir}/templates">
-            <fileset dir="templates" includes="${package}.xml" />                                         
-		</copy>
+    <echo file="version.xml">&lt;addon name="${projName}" version="${projVersion}"&gt;
+    &lt;depends on="beast2" atleast="${beastVersionReq}"/&gt;
 
-		
-		<jar jarfile="${dist}/${package}.addon.v${version}.zip">
-			<fileset dir="${Add_on_dir}">
-				<include name="**/*" />
-			</fileset>
-        </jar>
-		<echo message="Add-on version v${version} release is finished." />
-	</target>
+    &lt;!-- Add other dependencies as necessary. --&gt;
+&lt;/addon&gt;
+</echo>
+
+    <echo file="README.md" message="README for my package.${line.separator}"/>
+
+    <condition property="licenseURL" value="https://www.gnu.org/licenses/gpl-3.0.txt">
+      <equals arg1="${license}" arg2="gpl3"/>
+    </condition>
+    <condition property="licenseURL" value="https://www.gnu.org/licenses/lgpl-3.0.txt">
+      <equals arg1="${license}" arg2="lgpl3"/>
+    </condition>
+    <condition property="licenseURL" value="https://www.gnu.org/licenses/lgpl-2.1.txt">
+      <equals arg1="${license}" arg2="lgpl2.1"/>
+    </condition>
+    <condition property="licenseURL" value="http://www.apache.org/licenses/LICENSE-2.0.txt">
+      <equals arg1="${license}" arg2="apache2"/>
+    </condition>
+
+    <get src="${licenseURL}" dest="COPYING"/>
+
+    <mkdir dir="${src}"/>
+    <mkdir dir="${test}"/>
+    <mkdir dir="${lib}"/>
+    <mkdir dir="${examples}"/>
+    <mkdir dir="${templates}"/>
+    <mkdir dir="${doc}"/>
+
+    <echo/>
+    <echo>Done.</echo>
+    <echo/>
+    <echo>The directory structure is as follows:</echo>
+    <echo>${src} - your java source goes here</echo>
+    <echo>${test} - your junit tests go here (You _are_ going to write, those, aren't you!)</echo>
+    <echo>${doc} - your documentation goes here</echo>
+    <echo>${examples} - your example XML scripts go here</echo>
+    <echo>${templates} - your BEAUti templates go here</echo>
+    <echo/>
+    <echo>To build your package, just type "ant" at the command line.</echo>
+    <echo/>
+    <echo>To run unit tests, type "ant test".</echo>
+    <echo/>
+    <echo>That's it!  Happy coding!</echo>
+    
+  </target>
 
 </project>
